# chatbot-service

./: .gitignore  README.md  everytime_computer_data.json  get_detail.ipynb  get_detail.py  get_url.ipynb  get_url.py  url.json  url_test.json
client/: package-lock.json  package.json
client/src/: App.js
client/src/components/chatbot/: chatbot.js
client/src/components/dashboard/: dashboard.js
client/src/components/effect/: Animation.jsx
client/src/components/timetable/: editTable.js  lectureDialog.js  lectureList.js  timeTable.js
client/src/components/ui/: Button.jsx  Dialog.jsx  HeaderComponent.jsx  Table.jsx  TextInput.jsx
client/src/pages/editTable/: editTable.js
client/src/pages/main/: main.js  main.jsx
client/src/pages/session/: signin.js  signup.jsx
client/src/service/: auth.js
client/src/service/api/: http.js
client/src/service/chatbot/: chatBotService.js
client/src/theme/: theme.js
fastapi/: main.py  pyproject.toml  requirement.txt
fastapi/controllers/chatbot/: chatbotHandler.py  chatbotSetup.py
fastapi/controllers/login/: login.py  signin.py  user.py
fastapi/controllers/timetable/: lectureHandler.py  test.py  test1.py
fastapi/core/: config.py  security.py
fastapi/db/: crud_chat.py  crud_lecture.py  crud_user.py  engine.py
fastapi/models/: chat.py  lecture.py  sqlmodels.py  token.py  user.py
fastapi/models/user/: user.py
server/: app.js  package-lock.json  package.json
server/controllers/: apiController.js  chatBotHandler.js  lectureHandler.js  savedLectureHandler.js
server/models/: user.js
(+4 files in other folders)
